# opencl-bsp

./: .gitignore  board_env.xml  fpga_api_setup.sh  internal_readme.txt  readme.txt  release_notes.txt
ase/: Makefile  run_sim.sh  vlog_files_base.list
ase/bsp/: mem_sim_model.sv  sim_compile.sh
ase/bsp/extra_sim_files/: acl_ecc.svh  acl_sync.sv  hld_fifo.sv  platform_afu_top_config.vh
ase/patch/: Makefile  run_sim.sh  vlog_files_base.list
ase/scripts/: program
example_designs/: compile_all_examples_on_arc.sh  compile_all_examples_on_arc_1bank.sh  compile_all_examples_on_arc_inspur.sh  compile_vectoradd_example_on_arc.sh  compile_vectoraddint_example_on_arc.sh
example_designs/blank/: .gitignore
example_designs/boardtest/: boardtest_host
example_designs/boardtest/host/: boardtest.sln  hostspeed_ocl.h  kernel_rw.cpp  main.cpp  memspeed.cpp  reorder.cpp  reorder_ocl.cpp
example_designs/hello_world/: Makefile  README.html
example_designs/jpeg_decoder/: README.html
example_designs/jpeg_decoder/device/: jpeg_decoder.cl
example_designs/mandelbrot/: Makefile  README.html
example_designs/mandelbrot/device/: mandelbrot_kernel.cl
example_designs/mem_bandwidth/: README.txt
example_designs/memspeed/: Makefile
example_designs/opencl_raytracer/: .gitignore  fractsphere_scene  opencl.cpp  options.cpp  packages_needed.txt  raytracer.cl  simple_scene
example_designs/vector_add/: Makefile  README.html
example_designs/vector_add_int/: vector_add_int.cl
example_designs_a10/: compile_all_examples_on_arc.sh  compile_helloworld_example_on_arc.sh
example_designs_a10/memspeed/: Makefile
example_designs_a10/opencl_raytracer/: Makefile  opencl.cpp
example_designs_a10/vector_add/: README.html
example_designs_s10/: .gitignore  compile_all_examples_on_arc.sh  compile_helloworld_example_on_arc.sh  compile_vectoradd_example_on_arc.sh  compile_vectoraddint_example_on_arc.sh
example_designs_s10/boardtest/: Makefile.arm  Makefile.linux  Makefile.windows
example_designs_s10/hello_world/: README.html
example_designs_s10/mandelbrot/: Makefile
example_designs_s10/mem_bandwidth/: Makefile  README.txt
example_designs_s10/memspeed/: compile_options.txt
example_designs_s10/mmd_copy_test/: .gitignore  Makefile
example_designs_s10/opencl_raytracer/: README.txt  aocl_utils.h  opencl.h  raytracer.cpp  raytracer4.cl  raytracer9.cl
example_designs_s10/vector_add_int/: Makefile
hardware/: Thumbs.db
hardware/bdw_fpga_400/: acl_clock_iface.tcl  board.qsys  board_spec.xml  ccip_std_afu.sv  iface.ipx  sim_compile.sh  system.qsys  system.v
hardware/bdw_fpga_skx/: acl_kernel_clk_a10.qsys  board.qsys  bsp_logic.sv  ccip_std_afu.sv  rr_arb.v  rr_arb_hw.tcl
hardware/bdw_fpga_skx_621/: board_spec.xml  import_compile.tcl  mpf_pll.v
hardware/dcp_a10/: add_bbb_to_pr_project.tcl  afu_ip.qsf  board.qsys  board_spec.xml  bsp_logic.sv  ccip_std_afu.sv  make_ipx.sh  opencl_afu.json  quartus.ini  run.sh  user_clock.sdc
hardware/dcp_inspur/: afu_fit.qsf  afu_ip.qsf  afu_synth.qsf  board.qsys  board_spec.xml  bsp_logic.sv  ccip_std_afu.sv  ddr_board.qsys  import_blue_bits.sh  make_ipx.sh  opencl_afu.json  system.v  user_clock.sdc
hardware/dcp_s10/: board_spec.xml  quartus.ini
hardware/skx_fpga/: a10_partial_reconfig.tcl  afu_fit.qsf  afu_ip.qsf  afu_synth.qsf  board_spec.xml  bsp_logic.sv  ccip_std_afu.sv  dcp.qsf  fpga_defines.vh  fpga_top.qpf  generate_pr_bitstream.sh  import_bbs_sdc.tcl  kernel_system.qsys  lnkpr2sr  opencl_bsp_ip.qsf  opencl_sys.qsf  ptmgr_temp_cmp_ROM.mif  ptmgr_temp_cnv_ROM.mif  qsf_cci_mpf_PAR_files.qsf  quartus.ini  reset.sdc  run.sh  show_ports.tcl  skx_pr_afu.qsf  skx_pr_afu_synth.qsf  system.v  top.qpf  top.qsf
hardware/skx_fpga_dcp/: afu_synth.qsf  board.qsys  board_spec.xml  ccip_std_afu.sv  dcp.qpf  dcp.qsf  dcp_bbs.sdc  dcp_top.sdc  iface.ipx  import_blue_bits.sh  kernel_system.qsys  pr_setup.tcl  reset.sdc  run.sh  sim_compile.sh
hardware/skx_fpga_dcp_ddr/: afu_fit.qsf  afu_ip.qsf  afu_synth.qsf  afuregs.hex  board.qsys  board_spec.xml  bsp_logic.sv  ccip_std_afu.sv  ddr_board.qsys  iface.ipx  make_ipx.sh  mem_sim_model.sv  opencl_afu.json  report_timing.tcl  reset.sdc  run.sh  sim_compile.sh  system.v  user_clock.sdc
hardware/skx_fpga_dcp_ddr_1bank/: afu_synth.qsf  board.qsys  board_spec.xml  bsp_logic.sv  ccip_std_afu.sv  ddr_board.qsys  fpga_defines.vh  opencl_afu.json  reset.sdc  system.v
hardware/skx_fpga_dcp_svm/: afu_fit.qsf  afu_ip.qsf  afu_synth.qsf  afuregs.hex  board.qsys  dcp.qsf  import_blue_bits.sh  make_ipx.sh  opencl_afu.json  reset.sdc  run.sh  sim_compile.sh  system.v
linux64/libexec/: flash  install  setup_permissions.sh  uninstall
overlays/: 16gb_mem.patch
scripts/: aoc_for_bsp.sh  bsp_common.sh  bsp_env_shell.sh  build_aal.sh  build_aal_clock_tool.sh  build_fpga_api.sh  build_mmd.sh  build_opae.sh  build_release_pkg.py  build_release_pkg.sh  run_complete_sim_test.sh  run_full_hello_world_opencl_sim_test.sh  run_full_mmd_copy_sim_test.sh  run_full_opencl_sim_test.sh  run_full_vector_add_opencl_sim_test.sh  setup_all_bsps.sh  setup_bsp.py  setup_bsp.sh  setup_env.sh  setup_mmd_dev.sh  setup_mpf.sh  setup_packages.sh  sim_bsp_env_shell.sh  sim_common.sh
source/: CMakeLists.txt  Makefile  Makefile.common
source/host/: -g  .ccip_mmd.cpp.marks  CMakeLists.txt  IMPF.h  Makefile  Makefile.sim  acl_qpimmd.h  afu_bbb_util.h  aocl_mmd.h  bitstream-tools.h  bitstream_int.h  ccip_mmd.cpp  ccip_mmd_device.cpp  ccip_mmd_device.h  dma_work_thread.cpp  dma_work_thread.h  eventfd_wrapper.h  fpga_dma.c  fpga_dma.h  fpga_dma_internal.h  fpgaconf.c  fpgaconf.h  kernel_interrupt.cpp  kernel_interrupt.h  memcpy_s_fast.c  mmd_dma.cpp  mmd_dma.h  tags  test_perm.cpp  test_perm.h  transcript  zlib_inflate.c  zlib_inflate.h
source/include/: aocl_mmd.h  ccip_mmd.h  memcpy_s_fast.h  pkg_editor.h
source/util/: CMakeLists.txt  Makefile
source/util/diagnostic/: CMakeLists.txt  Makefile  acl_aligned.cpp  acl_aligned.h  main.cpp  ocl.cpp  ocl.h
source/util/reprogram/: CMakeLists.txt  Makefile  board.h  reprogram.cpp
(+345 files in other folders)
